--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,6 @@
         }
     ],
     "require": {
-        "laravel/framework": "^6.0|9.0|^10.0"
+        "laravel/framework": "^6.0|^7.0|^8.0|9.0|^10.0"
     }
 }
